# bin2text

./: CMakeLists.txt  README.md
include/bin2text/: base64.h  base85.h
